Agregado de guards y pantalla de cambio de nombre

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,18 +2,15 @@
   <!-- Título -->
   <h1 class="italic borde-animado">TA-TE-TI <span>ONLINE</span></h1>
 
-  <!-- Escribí tu nombre -->
-  <form id="nombre-form" (ngSubmit)="usuario.cambiarNombre(nombre.value)">
-    <label for="nombre" class="italic">ESCRIBÍ TU NOMBRE</label>
-    <input type="text" name="nombre" id="nombre" class="borde-punteado" [value]="usuario.nombre()" #nombre>
-    <button class="submit" [disabled]="!nombre.value ||  nombre.value === usuario.nombre()">Guardar</button>
-  </form>
-
+  @if(usuario.nombre()){
+    <p id="nombre">Hola <span>{{usuario.nombre()}}!</span></p>
+  }
   <!-- Botones inferiores -->
-  <div class="flex-column">
+  <div class="flex-column" id="opciones">
     <!-- <a [routerLink]="['/jugar']" class="boton">Jugar online (sala pública)</a> -->
-    <button (click)="buscarSalaPublica()" class="boton">Jugar online (sala pública)</button>
+    <button (click)="buscarSalaPublica()" class="boton">Jugar online</button>
     <a [routerLink]="['/jugar-privada']" class="boton">Crear sala privada</a>
+    <a [routerLink]="['/cambiar-nombre']" class="boton">Cambiar nombre</a>
   </div>
   <!-- <form (ngSubmit)="irASala(salaInput.value)">
     <label for="sala">Nº de sala</label>
