Ajustes gráficos varios

--- a/src/app/components/botonera/botonera.component.html
+++ b/src/app/components/botonera/botonera.component.html
@@ -12,8 +12,8 @@
     </div>
   </div>
   <div id="botones-start-container" class="flex-center">
-    <div class="boton"><span>SELECT</span></div>
-    <div class="boton"><span>START</span></div>
+    <div class="boton-alargado"><span>SELECT</span></div>
+    <div class="boton-alargado"><span>START</span></div>
   </div>
   <div id="parlante-container">
     <div></div>
