--- a/src/app/components/botonera/botonera.component.scss
+++ b/src/app/components/botonera/botonera.component.scss
@@ -62,7 +62,7 @@ $padding-d-pad: 6px;
   padding: 4px;
 }
 
-#botones-start-container .boton{
+#botones-start-container .boton-alargado{
   border: 1px solid colors.$background-contrast;
   border-radius: 30px;
   rotate: -35deg;
