--- a/src/app/components/modal-fullscreen/modal-fullscreen.component.html
+++ b/src/app/components/modal-fullscreen/modal-fullscreen.component.html
@@ -4,10 +4,10 @@
   <span id="uno" @inOutAnimation1>
     <ng-content select="[primario]"></ng-content>
   </span>
-  <span id="dos" @inOutAnimation2>
+  <span id="dos" class="flex-column" @inOutAnimation2>
     <ng-content select="[secundario]"></ng-content>
   </span>
-  <span id="pie">
+  <span id="pie" class="flex-column">
     <ng-content select="[pie]"></ng-content>
   </span>
 </div>
