--- a/src/app/components/detalle-partida/detalle-partida.component.scss
+++ b/src/app/components/detalle-partida/detalle-partida.component.scss
@@ -1,3 +1,5 @@
+@use "./../../../assets/colors.scss";
+
 section{
   display: flex;
   justify-content: space-between;
@@ -13,5 +15,28 @@ section{
   }
   &:nth-of-type(2){
     text-align: end;
+  }
+}
+
+.corazon{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5rem;
+  color: colors.$accent-2;
+  border-bottom: 1px solid colors.$accent-2;
+  text-align: center;
+}
+
+.marcaJugador{
+  position: relative;
+  display: inline-block;
+  padding: 0px 7px;
+  margin: 0 8px;
+  font-size: larger;
+  aspect-ratio: 1;
+  // width: 1.5rem;
+  &.activo{
+    background-color: colors.$accent-1;
+    border-radius: 50%;
+    // padding: 10px;
   }
 }
