--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,34 @@
 @use "./../../../assets/colors.scss";
 
+h1{
+  position: relative;
+  font-size: 4rem;
+  span{
+    position: absolute;
+    font-size: 1rem;
+    bottom: -30px;
+    right: 15px;
+  }
+} 
+
+
+#nombre{
+  margin-top: auto;
+  font-size: 1.2rem;
+  span{
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+}
+
+#opciones{
+  margin: auto;
+  gap: 10px;
+  *{
+    font-size: 1rem;
+  }
+}
+
 #pantalla-container{
   justify-content: space-between;
   height: 500px;
@@ -7,26 +36,8 @@
   margin: 40px 0;
 }
 
-h1 span{
-  display: block;
-  font-size: medium;
-}
-
-#nombre-form{
-  label{
-    display: block;
-  }
-  input {
-    background-color: transparent;
-  }
-  button:disabled{
-    //background-color: rgb(230, 230, 230);
-    color: colors.$primary;
-  }
-}
-
 $ancho-borde-animado: 350px;
-$alto-borde-animado: 50px;
+$alto-borde-animado: 100px;
 
 .borde-animado {
   height:$alto-borde-animado;
