Aplicado estilo responsive

--- a/src/app/components/botonera/botonera.component.scss
+++ b/src/app/components/botonera/botonera.component.scss
@@ -5,7 +5,9 @@ $ancho-seccion-d-pad: 20px;
 $padding-d-pad: 6px;
 
 #container{
-  padding-top: 60px;
+  //padding-top: 10px;
+  height: 38vh;
+  justify-content: flex-end;
   gap: 40px;
 }
 
