--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,9 @@ $padding-consola: 20px;
 #container{
   background-color: colors.$accent-1;
   max-width: 500px;
+  box-sizing: border-box;
+  max-height: 100vh;
+  overflow: hidden;
   border-radius: calc($border-radius-base + $padding-consola);
   padding: $padding-consola;
 }
@@ -18,5 +21,14 @@ $padding-consola: 20px;
   overflow: hidden;
 }
 
-#branding{
+@media( height < "830px"){
+  app-botonera{
+    display: none;
+  }
+}
+
+@media (width <= "600px"){
+  #container{
+    max-width: 100%;
+  }
 }
