--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -31,7 +31,7 @@ h1{
 
 #pantalla-container{
   justify-content: space-between;
-  height: 500px;
+  min-height: 400px;
   align-items: center;
   margin: 40px 0;
 }
@@ -50,15 +50,54 @@ $alto-borde-animado: 100px;
     linear-gradient(0deg, colors.$primary 50%, transparent 50%);
   background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
   background-size: 15px 4px, 15px 4px, 4px 15px, 4px 15px;
-  background-position: 0px 0px, $ancho-borde-animado$alto-borde-animado, 0px$alto-borde-animado, $ancho-borde-animado 0px;
+  background-position: 0px 0px, $ancho-borde-animado$alto-borde-animado, 0px $alto-borde-animado, $ancho-borde-animado 0px;
   padding: 10px;
   animation: borde-animado 1s infinite steps(2,jump-both);
 }
-@keyframes borde-animado {
-  0% {
-    background-position: 0px 0px, 300px calc($alto-borde-animado + 16px), 0px 150px, calc($ancho-borde-animado + 16px) 0px;
+
+
+@media( width <= "600px"){
+  $ancho-borde-animado : 240px;
+  $alto-borde-animado : 50px;
+  @keyframes borde-animado {
+    0% {
+      background-position: 0px 0px, 300px calc($alto-borde-animado + 16px), 0px 50px, calc($ancho-borde-animado + 16px) 0px;
+    }
+    100% {
+      background-position: 300px 0px, 0px calc($alto-borde-animado + 16px), 0px 0px, calc($ancho-borde-animado + 16px) 150px;
+    }
   }
-  100% {
-    background-position: 300px 0px, 0px calc($alto-borde-animado + 16px), 0px 0px, calc($ancho-borde-animado + 16px) 150px;
+  .borde-animado {
+    height:$alto-borde-animado;
+    width: $ancho-borde-animado;
+    line-height: $alto-borde-animado;
+    background-position: 0px 0px, $ancho-borde-animado $alto-borde-animado, 0px $alto-borde-animado, $ancho-borde-animado 0px;
+  }
+  
+
+  h1{
+    font-size: 2rem;
+    span{
+      font-size: 0.8rem;
+      bottom: -10px;
+      right: 10px;
+    }
+  } 
+}
+
+@media( width > "600px"){
+  @keyframes borde-animado {
+    0% {
+      background-position: 0px 0px, 300px calc($alto-borde-animado + 16px), 0px 150px, calc($ancho-borde-animado + 16px) 0px;
+    }
+    100% {
+      background-position: 300px 0px, 0px calc($alto-borde-animado + 16px), 0px 0px, calc($ancho-borde-animado + 16px) 150px;
+    }
+  }
+}
+
+@media( height < "830px"){
+  #pantalla-container{
+    height: 80vh;
   }
 }
